fixed z-index not letting you click on prodibi pics

--- a/css/style.css
+++ b/css/style.css
@@ -430,7 +430,7 @@ h2 .sidebar-button-mobile {
 
 .col-sm-10 {
   /* max-width: 100%; */
-  z-index: -1;
+  /* z-index: -1; */
 }
 .col-sm-2 {
   /* width: 840px; */
